# pyduk

./: .gitignore  CMakeLists.txt  README.md  TODO.md  requirements.txt  setup.py
cmake_build_extension/: build_extension.py
doc/: CMakeLists.txt  Doxyfile.in  Readme.md
lib/: CMakeLists.txt  duk_config.h
patches/: 0001-Change-component-requirement-to-python.patch
python/pyduk/: __init__.py
src/main/: CMakeLists.txt  main.cpp
src/pyduk/: CMakeLists.txt  circular_reference_tracker.hpp  context.cpp  context.hpp  exceptions.cpp  exceptions.hpp  i_circular_reference_tracker.hpp  pyduk.cpp  pyduk.hpp.in
test/: CMakeLists.txt  circular_references.cpp  context_fixture.hpp  conversion.cpp  environment.hpp  main.cpp  test.cpp
